--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Cover Page Transition | Codrops</title>
-		<meta name="description" content="A cover page transition based on Vitalii Burhonskyi's Dribbble shot." />
+		<title>New Energies</title>
+		<meta name="description" content="Sample New One" />
 		<meta name="keywords" content="page transition, gsap, animation, web design, javascript, demo" />
-		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" href="https://use.typekit.net/ehl0ehl.css">
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
